# rag-chatbot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: __init__.py  errors.py  redaction.py  viz_failures.py
configs/: default.yaml  demo.yaml  loader.py
data/benchmarks/tiny/: queries.jsonl
data/organization_corpus/: mission.txt
data/sample_docs/: doc2.md  doc3.txt
data_ingestion/: __init__.py  loader.py
deploy/: local_run.py  org_run.py  runtime.py
deploy/configs/: local.yaml  org.yaml
deploy/scripts/: benchmark_load.py
docs/: DEPLOYMENT_GUIDE.md  ERROR_ANALYSIS_GUIDE.md  EXPERIMENT_GUIDE.md
evaluation/: __init__.py  datasets.py  generation_eval.py  metrics.py  plots.py  retrieval_eval.py  run_benchmark.py  significance.py  tabulate.py
experiments/: ablations.py  cli.py  runner.py  seed.py  tracking.py
experiments/configs/: baseline.yaml  chunk_sizes.yaml  hybrid_vs_bm25_faiss.yaml  prf_grid.yaml  reranker_grid.yaml
generation/: __init__.py  citation_pipeline.py  dummy.py  openai_generator.py
indexing/: __init__.py  embedder.py  index.py  vector_store.py
monitoring/: __init__.py  logging.py  metrics.py
pipelines/: chatbot.py
reports/: generate_report.py  template.md.j2
repro/: README.md  env_capture.py
reranking/: __init__.py  coverage.py
retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  prf.py
scripts/: run_demo.py
tests/: test_api_server.py  test_data_ingestion.py  test_deploy_local.py  test_deploy_org.py  test_errors.py  test_evaluation.py  test_failures_integration.py  test_generation.py  test_indexing.py  test_integration.py  test_monitoring.py  test_redaction.py  test_reranking.py  test_retrieval.py  test_streamlit_ui.py
tests/fixtures/benchmarks/tiny/: corpus.jsonl
tests/integration/: test_runner.py
tests/unit/: test_datasets.py  test_env_and_seed.py  test_metrics.py  test_significance.py  test_tracker.py
ui/: server.py  streamlit_app.py
