[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = "Production-ready scaffold for a retrieval-augmented generation chatbot"
authors = ["AI Engineer <ai@example.com>"]
readme = "README.md"
packages = [{ include = "data_ingestion" }, { include = "indexing" }, { include = "retrieval" }, { include = "reranking" }, { include = "generation" }, { include = "evaluation" }, { include = "pipelines" }, { include = "ui" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
streamlit = "^1.36.0"
faiss-cpu = "^1.8.0"
scikit-learn = "^1.4.2"
rank-bm25 = "^0.2.2"
markdown2 = "^2.4.13"
pypdf = "^4.2.0"
openai = "^1.30.1"
sentence-transformers = "^2.7.0"
numpy = "^1.26.4"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
pydantic = "^2.7.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
