[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = "Production-ready scaffold for a retrieval-augmented generation chatbot"
authors = ["AI Engineer <ai@example.com>"]
readme = "README.md"
packages = [
    { include = "data_ingestion" },
    { include = "indexing" },
    { include = "retrieval" },
    { include = "reranking" },
    { include = "generation" },
    { include = "evaluation" },
    { include = "pipelines" },
    { include = "ui" },
    { include = "deploy" },
    { include = "monitoring" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
streamlit = "^1.36.0"
faiss-cpu = "^1.8.0"
scikit-learn = "^1.4.2"
rank-bm25 = "^0.2.2"
markdown2 = "^2.4.13"
pypdf = "^4.2.0"
openai = "^1.30.1"
sentence-transformers = "^2.7.0"
numpy = "^1.26.4"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
pydantic = "^2.7.1"
requests = "^2.32.3"
httpx = "^0.27.0"
PyYAML = "^6.0.1"
typer = "^0.12.3"
Jinja2 = "^3.1.4"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.5"
mypy = "^1.10.0"
flake8 = "^7.1.0"

[tool.poetry.scripts]
ragx-run = "experiments.cli:run_command"
ragx-ablations = "experiments.cli:ablations_command"
ragx-report = "experiments.cli:report_command"
ragx-analyze = "experiments.cli:analyze_command"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
